@@ -12,4 +12,13 @@
         template="dashboard.pt"
         />
 
+    <!-- this view provides a not-js fallback for the user dropdown menu.
+    It has been placed here to be near the personal bar code -->
+    <browser:page
+        for="plone.app.layout.navigation.interfaces.INavigationRoot"
+        name="useractions"
+        permission="plone.app.portlets.ViewDashboard"
+        class=".user_actions.UserActionsView"
+        template="user_actions.pt"
+        />
 </configure>
