@@ -1,0 +1,34 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="plone">
+
+<head>
+    <metal:block fill-slot="top_slot"
+                 tal:define="dummy python:request.set('disable_border',1);
+                             disable_column_one python:request.set('disable_plone.leftcolumn',1);
+                             disable_column_two python:request.set('disable_plone.rightcolumn',1);" />
+</head>
+
+<body>
+
+<metal:main fill-slot="main">
+<h1 i18n:translate="">User Actions</h1>
+<ul>
+    <li tal:repeat="action view/user_actions">
+        <a href=""
+           tal:attributes="href action/url;
+                           id string:personaltools-${action/id};"
+           tal:content="action/title"
+           i18n:translate="">
+            action title
+        </a>
+    </li> 
+</ul>
+</metal:main>
+
+</body>
+</html>
