@@ -4,7 +4,8 @@ Changelog
 2.1.13 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Added a page as a not-js fallback for the user dropdown menu
+  [giacomos]
 
 
 2.1.12 (2011-11-28)
